# poetry-demo

./: pyproject.toml
src/poetry_demo/: main.py
